# ssgz

./: Cargo.toml
.github/workflows/: build.yaml
src/: gui.rs  main.rs
