[package]
name = "ssgz"
version = "0.2.0"
edition = "2024"

# Want to let end users run the patcher from source w/o needing to build asm patches
[workspace]
exclude = ["custom-functions"]

[dependencies]
disc_riider = "0.2.2"
sha1 = "0.10.6"
thiserror = "2.0.12"
clap = { version = "4.5.20", features = ["derive"] }
rfd = "0.15.3"
anyhow = "1.0.98"
binrw = "0.14.1"
indicatif = "0.17.11"
const_format = "0.2.34"
include_dir = { version = "0.7.4", features = ["glob"] }
serde_yml = "0.0.12"
serde = { version = "1.0.219", features = ["derive"] }
dialoguer = "0.11.0"
dioxus = { version = "0.6.0" }
futures = "0.3.31"
tokio = "1.45.1"
self_update = { version = "0.42", features = ["archive-zip", "compression-zip-deflate"] }
semver = "1.0.26"
env_logger = "0.11.8"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
